--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ Pillow==11.0.0
 google-generativeai==0.7.2
 requests==2.31.0
 celery==5.3.4
+django-celery-beat==2.5.0
 redis==5.0.1
 pydantic==2.5.0
 gunicorn==21.2.0
